--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,9 @@ input[type="text"] {
 .katex-display > .katex {
   text-align: left;
 }
+
+@media only screen and (max-width: 767px) {
+  :root {
+    font-size: 14px;
+  }
+}
