--- a/styles/shape.module.css
+++ b/styles/shape.module.css
@@ -86,6 +86,8 @@
 }
 
 .shapeFormula {
+  width: 100%;
+  overflow-x: auto;
   padding-top: 1em;
 }
 
@@ -165,21 +167,40 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 0.5em;
+  overflow-x: auto;
+  gap: 1.5em;
 }
 
 @media only screen and (max-width: 1024px) {
+  .shapeInputContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
   .shapeContainer {
     padding: 7.5em 2em 2em;
     width: 100%;
   }
   .variableContainer {
-    align-items: flex-start;
-    gap: 1em;
-    flex-direction: column;
+    padding: 0.5em 0;
+  }
+  .variableDetail {
+    width: 130px;
   }
   .solutionContainer {
     padding: 3em 2em;
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .shapeInputContainer {
+    width: 100%;
+  }
+  .variableDetail {
+    gap: 0.5em;
+  }
+  .shapeImg {
+    display: none;
   }
 }
