--- a/styles/matrix.module.css
+++ b/styles/matrix.module.css
@@ -1,4 +1,4 @@
-.matrixContainer {
+.matrix_page_container {
   position: relative;
   margin: 0 auto;
   min-height: 100vh;
@@ -7,6 +7,171 @@
   max-width: 1000px;
   display: flex;
   gap: 1em;
+}
+
+.matrix_section {
+  flex: 0.5;
+  display: flex;
+  gap: 5em;
   flex-direction: column;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  gap: 1em;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.title {
+  color: #9aa0a6;
+  text-transform: capitalize;
+  font-weight: 500;
+  padding-bottom: 2em;
+}
+
+.order_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.order_container {
+  display: flex;
   align-items: center;
+  gap: 0.5em;
+}
+
+.plus_minus_icon {
+  opacity: 1;
+  pointer-events: initial;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  outline: none;
+  border: 1px solid #34373b;
+  color: #bdc1c6;
+  background: #34373b;
+  border-radius: 2.5px;
+  font-size: 0.725rem;
+  cursor: pointer;
+  box-shadow: inset 0px 0px 5px -2px rgba(64, 68, 72, 1);
+  transition: background 0.25ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.plus_minus_icon:hover {
+  background: #4c5056;
+}
+
+.plus_minus_icon_disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.order_input {
+  height: 30px;
+  width: 35px;
+  text-align: center;
+  outline: none !important;
+  border: none !important;
+  border-bottom: 1px solid #5f6368 !important;
+}
+
+.matrix_container {
+  position: relative;
+  height: 100%;
+  padding-bottom: 2.5em;
+  display: flex;
+  gap: 1.5em;
+  align-items: center;
+  justify-content: center;
+}
+
+.matrix_declare {
+  margin-left: -5em;
+  display: flex;
+  gap: 1.5em;
+  align-items: center;
+}
+
+.matrix_wrapper {
+  padding: 0.45em 0.75em;
+  border-left: 1px solid #bdc1c6;
+  border-right: 1px solid #bdc1c6;
+}
+
+.matrix_input {
+  width: 50px;
+  padding: 0.5em !important;
+  font-size: 1.25rem !important;
+  text-align: center;
+  border: none !important;
+}
+
+.matrix_input:focus {
+  border-bottom: 1px solid #bdc1c6 !important;
+}
+
+.clear_matrix_btn {
+  padding: 0.75em 1em;
+  width: unset;
+  position: absolute;
+  bottom: 6em;
+  background: #4c5056;
+  border-color: #4c5056;
+}
+
+.clear_matrix_btn:hover {
+  background: #585d63;
+}
+
+.operations_wrapper {
+  display: flex;
+  gap: 0.25em;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 250px;
+}
+
+.operation {
+  pointer-events: initial;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #34373b;
+  color: #bdc1c6;
+  background: #34373b;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: inset 0px 0px 5px -2px rgba(64, 68, 72, 1);
+}
+
+.operation:hover {
+  background-color: #404448;
+}
+
+.operation_disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.matrix_page_solution {
+  display: none;
+  margin: 0 auto;
+  width: 80%;
+  max-width: 1000px;
+}
+
+.matrix_solution {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  overflow-x: auto;
+  gap: 1.5em;
+}
+
+.matrix_display {
+  font-size: 1.5rem;
 }
