--- a/styles/matrix.module.css
+++ b/styles/matrix.module.css
@@ -155,7 +155,7 @@
 }
 
 .operation_modified {
-  width: 41.5%;
+  width: 104px;
   flex-wrap: wrap;
 }
 
@@ -215,32 +215,51 @@
   font-size: 1.05rem;
 }
 
+.eigen_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 2em;
+}
+
+.eigen_child_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  font-size: 1.05rem;
+}
+
 .matrix_display {
   margin: auto;
   font-size: 1.05rem;
 }
 
 .matrix_equation {
+  padding: 2em 0;
   display: flex;
   gap: 1em;
   align-items: center;
   justify-content: center;
 }
 
-.matrix_calculation_display {
-  padding: 2em 0;
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-  align-items: flex-start;
-}
-
 .page_calculation {
+  display: none;
   padding: 3em 0;
   margin: 0 auto;
   width: 80%;
   max-width: 1000px;
   border-bottom: 1px solid #5f6368;
+}
+
+.loading_wrapper,
+.error_wrapper {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1024px) {
