--- a/styles/shape.module.css
+++ b/styles/shape.module.css
@@ -1,23 +1,3 @@
-.shape_container {
-  position: relative;
-  margin: 0 auto;
-  min-height: 100vh;
-  padding: 7.5em 0 0;
-  width: 80%;
-  max-width: 1000px;
-  display: flex;
-  gap: 1em;
-  flex-direction: column;
-  align-items: center;
-}
-
-.header {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .title {
   color: #9aa0a6;
   text-transform: capitalize;
@@ -31,13 +11,11 @@
   padding-top: 1em;
 }
 
-.content {
+.section {
+  padding-top: 6em;
   width: 100%;
   display: flex;
-}
-
-.input_container {
-  width: 50%;
+  justify-content: space-between;
 }
 
 .figure {
@@ -47,9 +25,29 @@
   justify-content: center;
 }
 
-.submit_container {
+.submit_button_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 5em;
   position: absolute;
-  bottom: 4em;
+  bottom: 2em;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.submit_btn_modified {
+  padding: 0.75em 0.25em;
+  width: 80px;
+  background: #4c5056;
+  border-color: #4c5056;
+}
+
+.submit_btn_modified:last-child {
+  background: transparent;
+}
+
+.submit_btn_modified:hover {
+  background: #585d63;
 }
 
 .solution_container {
