Made it responsive

--- a/styles/equation-solver.module.css
+++ b/styles/equation-solver.module.css
@@ -107,3 +107,23 @@
   gap: 0.5em;
   flex-direction: column;
 }
+
+@media only screen and (max-width: 767px) {
+  .numpad_outer_wrapper {
+    display: none;
+  }
+  .section {
+    margin-top: unset;
+  }
+  .roots_wrapper {
+    font-size: 1.25rem;
+  }
+  .display_equation {
+    font-size: 1.25rem !important;
+  }
+  .input_advanced_exp {
+    width: calc(100vw - 2.5em) !important;
+    height: 50px !important;
+    font-size: 1.1rem !important;
+  }
+}
