--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,12 @@ body {
   font-size: 1.05rem;
 }
 
+.link {
+  color: inherit;
+  appearance: none;
+  text-decoration: none;
+}
+
 .input_values_container {
   display: flex;
   flex-direction: column;
