--- a/styles/globals.css
+++ b/styles/globals.css
@@ -221,10 +221,11 @@ input[type="text"] {
     display: none;
   }
   .page_container {
-    padding: 3em 0 4em;
+    padding: 3em 0 2em;
     width: 90%;
     gap: 5em;
     border-bottom: 1px solid #5f6368;
+    border: 1px solid red;
   }
   .page_container .select_button {
     width: 32.5% !important;
