--- a/styles/equation-solver.module.css
+++ b/styles/equation-solver.module.css
@@ -31,8 +31,8 @@
 .submit_btn_modified {
   padding: 0.75em 0.25em;
   width: 80px;
-  background: #4c5056;
-  border-color: #4c5056;
+  background: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .submit_btn_modified:last-child {
@@ -40,29 +40,29 @@
 }
 
 .submit_btn_modified:hover {
-  background: #585d63;
+  background: var(--primary-accent-hover-color);
 }
 
-.help_container {
+/* .help_container {
   position: absolute;
   right: 0;
   bottom: 3.5em;
   font-size: 1.65rem;
   color: #5f6368;
   cursor: pointer;
-}
+} */
 
-.help_icon:hover {
+/* .help_icon:hover {
   color: #9aa0a6;
-}
+} */
 
-.help_section_wrapper {
+/* .help_section_wrapper {
   position: fixed;
   inset: 0;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.35);
-}
+} */
 
 .loading_wrapper,
 .error_wrapper {
@@ -79,7 +79,7 @@
   margin: 0 auto;
   width: 80%;
   max-width: 1000px;
-  border-bottom: 1px solid #5f6368;
+  border-bottom: 1px solid var(--accent-color);
 }
 
 .equation_wrapper {
