--- a/styles/homepage.module.css
+++ b/styles/homepage.module.css
@@ -4,7 +4,7 @@
   gap: 2em;
   flex-direction: column;
   align-items: center;
-  border-bottom: 1px solid #bdc1c6;
+  border-bottom: 1px solid var(--accent-color);
 }
 
 .type_details_wrapper {
@@ -29,11 +29,11 @@
 .title {
   font-size: 1.25rem;
   font-weight: 500;
-  color: #ddd;
+  color: var(--title-color);
 }
 
 .description {
-  color: #bdc1c6;
+  color: var(--primary-text-color);
 }
 
 .type_img_wrapper {
