--- a/styles/increase-decrease-count.module.css
+++ b/styles/increase-decrease-count.module.css
@@ -13,18 +13,18 @@
   width: 30px;
   height: 30px;
   outline: none;
-  border: 1px solid #34373b;
-  color: #bdc1c6;
-  background: #34373b;
+  border: 1px solid var(--secondary-accent-color);
+  color: var(--primary-text-color);
+  background: var(--secondary-accent-color);
   border-radius: 2.5px;
   font-size: 0.725rem;
   cursor: pointer;
-  box-shadow: inset 0px 0px 5px -2px rgba(64, 68, 72, 1);
+  box-shadow: inset 0px 0px 5px -2px var(--box-shadow-color);
   transition: background 0.25ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .plus_minus_icon:hover {
-  background: #4c5056;
+  background: var(--primary-accent-hover-color);
 }
 
 .plus_minus_icon_disabled {
@@ -43,7 +43,7 @@
   text-align: center;
   outline: none !important;
   border: none !important;
-  border-bottom: 1px solid #5f6368 !important;
+  border-bottom: 1px solid var(--accent-color) !important;
 }
 
 .order_input_modified {
