--- a/styles/matrix.module.css
+++ b/styles/matrix.module.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.65em;
-  color: #9aa0a6;
+  color: var(--secondary-text-color);
 }
 
 .matrix_container {
@@ -39,8 +39,8 @@
 
 .matrix_wrapper {
   padding: 0.45em 0.75em;
-  border-left: 1px solid #bdc1c6;
-  border-right: 1px solid #bdc1c6;
+  border-left: 1px solid var(--primary-text-color);
+  border-right: 1px solid var(--primary-text-color);
 }
 
 .matrix_wrapper_error {
@@ -75,7 +75,7 @@
 }
 
 .matrix_input:focus {
-  border-bottom: 1px solid #bdc1c6 !important;
+  border-bottom: 1px solid var(--primary-text-color) !important;
 }
 
 .button_wrapper {
@@ -90,8 +90,8 @@
 .btn {
   padding: 0.75em 0.25em;
   width: 100px;
-  background: #4c5056;
-  border-color: #4c5056;
+  background: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .btn:last-child {
@@ -99,7 +99,7 @@
 }
 
 .btn:hover {
-  background: #585d63;
+  background: var(--primary-accent-hover-color);
 }
 
 .operations_wrapper {
@@ -117,7 +117,7 @@
   padding: 3em 0;
   width: 80%;
   max-width: 1000px;
-  border-bottom: 1px solid #5f6368;
+  border-bottom: 1px solid var(--accent-color);
 }
 
 .operation_container {
@@ -139,12 +139,12 @@
 }
 
 .operation_col:first-child {
-  border-right: 1px solid #5f6368;
+  border-right: 1px solid var(--accent-color);
   align-items: flex-start;
 }
 
 .sub_title {
-  color: #9aa0a6;
+  color: var(--secondary-text-color);
   text-transform: capitalize;
   font-weight: 500;
   padding-bottom: 1em;
@@ -186,7 +186,7 @@
   margin: 0 auto;
   width: 80%;
   max-width: 1000px;
-  border-bottom: 1px solid #5f6368;
+  border-bottom: 1px solid var(--accent-color);
 }
 
 .loading_wrapper,
@@ -268,7 +268,7 @@
   .operation_col:last-child {
     flex: 1;
     order: 0;
-    border-bottom: 1px solid #5f6368;
+    border-bottom: 1px solid var(--accent-color);
   }
   .operation_col_wrapper {
     flex-direction: column;
