--- a/styles/matrix.module.css
+++ b/styles/matrix.module.css
@@ -117,7 +117,7 @@
   padding: 3em 0;
   width: 80%;
   max-width: 1000px;
-  border-bottom: 1px solid var(--accent-color);
+  border-top: 1px solid var(--accent-color);
 }
 
 .operation_container {
@@ -186,7 +186,7 @@
   margin: 0 auto;
   width: 80%;
   max-width: 1000px;
-  border-bottom: 1px solid var(--accent-color);
+  border-top: 1px solid var(--accent-color);
 }
 
 .loading_wrapper,
