Updated styles for navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,7 +56,7 @@ body {
   position: relative;
   margin: 0 auto;
   min-height: 100svh;
-  padding: 4em 0;
+  padding: 5em 0 4em;
   width: 80%;
   max-width: 1000px;
   display: flex;
@@ -110,6 +110,11 @@ body {
   color: inherit;
   appearance: none;
   text-decoration: none;
+}
+
+.link-active {
+  text-underline-offset: 5px;
+  text-decoration: underline;
 }
 
 .input_values_container {
@@ -203,10 +208,18 @@ input[type="text"] {
 .navbar_wrapper {
   position: fixed;
   top: 0;
-  padding: 1.5em;
+  padding: 1.25em;
   width: 100%;
   z-index: 99;
+  background: var(--background-color);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 2px 4px rgba(0, 0, 0, 0.06);
   transition: background 250ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.navbar_wrapper_logo {
+  position: absolute;
+  top: 55%;
+  transform: translate(0, -50%);
 }
 
 .navbar_scrolled {
@@ -226,6 +239,10 @@ input[type="text"] {
   opacity: 0.5;
   cursor: pointer;
   transition: opacity 250ms ease;
+}
+
+.navbar_wrapper_item--active {
+  opacity: 1;
 }
 
 .navbar_wrapper_item:hover {
@@ -278,7 +295,7 @@ input[type="text"] {
     display: none;
   }
   .page_container {
-    padding: 3em 0 2em;
+    padding: 5em 0 2em;
     width: 90%;
     gap: 5em;
     border-bottom: 1px solid var(--accent-color);
@@ -291,5 +308,17 @@ input[type="text"] {
   }
   .toggle_switch_wrapper {
     display: none;
+  }
+  .navbar_wrapper {
+    padding: 1em 1.25em;
+    display: flex;
+    justify-content: space-between;
+  }
+  .navbar_wrapper_menu {
+    cursor: pointer;
+    margin-left: auto;
+  }
+  .menu_logo {
+    margin-top: 0.25em;
   }
 }
