--- a/styles/matrix.module.css
+++ b/styles/matrix.module.css
@@ -75,6 +75,7 @@
 }
 
 .matrix_input:focus {
+  outline: transparent !important;
   border-bottom: 1px solid var(--primary-text-color) !important;
 }
 
@@ -103,6 +104,7 @@
 }
 
 .operations_wrapper {
+  position: relative;
   display: flex;
   gap: 0.25em;
   align-items: center;
